# OpenAgents

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  SPEC.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_add_github_skill_support.py
backend/app/: config.py  database.py  exceptions.py  main.py
backend/app/api/: agents.py  capabilities.py  mcp_servers.py  providers.py  skills.py  tasks.py  ws.py
backend/app/capabilities/: base.py  loader.py  registry.py
backend/app/capabilities/builtin/: chain_of_thought.py  self_critique.py  short_term_summary.py  structured_output.py
backend/app/core/: agent_runner.py  context.py  event_bus.py  orchestrator.py
backend/app/llm/: __init__.py  anthropic.py  base.py  factory.py  google.py  ollama.py  openai.py
backend/app/models/: __init__.py  agent.py  capability.py  llm_provider.py  mcp_server.py  message.py  skill.py  task.py
backend/app/schemas/: __init__.py  agent.py  capability.py  llm_provider.py  mcp_server.py  message.py  skill.py  task.py
backend/app/skills/: base.py  github_importer.py  loader.py  registry.py
backend/app/skills/builtin/: calculator.py  code_executor.py  datetime_info.py  file_reader.py  http_request.py  web_search.py
backend/app/workers/: agent_tasks.py  celery_app.py
frontend/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
(+37 files in other folders)
