[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openagents-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.30.0",
    "openai>=1.30.0",
    "google-generativeai>=0.7.0",
    "structlog>=24.0.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
